<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtOperationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_operation"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantite" />

    <TextView
        android:id="@+id/txtSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/source" />

    <TextView
        android:id="@+id/txtDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination" />
</LinearLayout>