<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16dp"
tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_title"
    android:textSize="24sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginBottom="32dp"/>

<Button
    android:id="@+id/btnMedications"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/medications"
    android:layout_marginBottom="16dp"/>

<Button
    android:id="@+id/btnLots"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lots"
    android:layout_marginBottom="16dp"/>

<Button
    android:id="@+id/btnStock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/stock"
    android:layout_marginBottom="16dp"/>

<Button
    android:id="@+id/btnLogistics"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/logistics"
    android:layout_marginBottom="16dp"/>

</LinearLayout>
