<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtLotNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lot_number"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtExpiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiration" />

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/txtMedication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication"
        />
</LinearLayout>